# aurorabox-cli

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
download-srs/: geosite-apple.srs  geosite-geolocation-cn.srs  geosite-one-cn.srs
src/: cli.rs  lib.rs  main.rs
src/core/: mod.rs  outbound.rs  template.rs
src/core/merger/: groups.rs  helper.rs  mod.rs  servers.rs  subscription.rs
src/core/templates/: mixed-global.json  mixed.json  tun-global.json  tun.json
src/db/: mod.rs  models.rs  queries.rs  schema.rs
src/proxy/: manager.rs  mod.rs  monitor.rs  process.rs  readiness.rs
src/service/: handlers.rs  mod.rs  router.rs  static_files.rs
src/utils/: mod.rs  proxy_parser.rs  rule_sets.rs  sing_box.rs
static/: index.html  tauri-shim.js
static/assets/: build-outbound-DD9U2c8x.js  developer-DDnz1A3a.js  groups-CL4JHAcO.js  index-b1fLrkd2.js  index-sktEWYvM.css  ios-text-field-G-B2o5f_.js  plus-PuBdTla6.js  router-DSBcRzP7.js  servers-BK7cnEtW.js  settings-B5UG81rt.js  shield-check-DBlvPNw_.js  updater-button-EOXiHfJ9.js
tests/: integration_test.rs
