[package]
name = "aurorabox-cli"
version = "0.1.0"
edition = "2021"
description = "AuroraBox CLI - sing-box proxy manager with optional web UI"

[[bin]]
name = "aurorabox"
path = "src/main.rs"

[features]
default = ["web-server"]
web-server = ["dep:axum", "dep:tower-http", "dep:tower", "dep:rust-embed", "dep:mime_guess"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server (optional)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
tower = { version = "0.5", optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP client (for subscription fetching)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# URL parsing
url = "2"
urlencoding = "2"
base64 = "0.22"

# SHA256 for subscription verification
sha2 = "0.10"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Random
rand = "0.8"

# Date/time
chrono = { version = "0.4", features = ["clock", "serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Lazy static (for global ProcessManager)
lazy_static = "1"

# Cross-platform process management
libc = "0.2"

# Archive extraction (for sing-box download)
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
